-
Bug
-
Resolution: Done
-
P2: Important
-
5.13
-
acb6ed0815f92588c3ff875a568e9561fe61218c (qt/qtdeclarative/5.14)
In case when there are many rows, say 1000 in DB and QSqlTableModel is used for it, TableView in Qt Quick always show only 256 rows only,even on scrolling down to table, it does not try to fetch more rows. Ideally, it should try to look for more rows.
With QTableView and TableView Controls 1, it works perfectly fine.
Please find the attached sample, where QTableView is showing all the rows whereas TableView from Qt Quick is not.