tests/auto/quick/qquicktableview/qquicktableview.pro
@@ -13,3 +13,5 @@ TESTDATA = data/*
 
 QT += core-private gui-private qml-private quick-private testlib qmlmodels-private
 
+DISTFILES +=
+
